# majsoul-screen-recognizer

./: .gitattributes  .gitignore  AGENTS.md  MULTI_AGENT.md  README.md  pyproject.toml  requirements.txt  run_app.py
app/: __init__.py  main_window.py  screen_select.py  suggestion_overlay.py
data/: config.example.json
mahjong/: __init__.py  analyzer.py  decision.py  shanten.py  shape_routes.py  tiles.py
recognizer/: __init__.py  capture.py  config.py  geometry.py  models.py  recognizer.py  river_events.py  stability.py  table_state.py  table_template_builder.py  template_builder.py  templates.py  visible_tiles.py
tests/: test_auto_discard_state.py  test_auto_tile_state.py  test_config.py  test_decision.py  test_dora_indicators.py  test_dora_ui_helpers.py  test_full_table_pipeline.py  test_mahjong.py  test_main_window_helpers.py  test_meld_kind_recognition.py  test_meld_structure.py  test_opponent_melds.py  test_recognition_diagnostics.py  test_recognizer.py  test_river_events.py  test_river_ui_helpers.py  test_rivers.py  test_run_app_console.py  test_shape_routes.py  test_stability.py  test_stability_regressions.py  test_suggestion_overlay.py  test_table_state.py  test_template_builder.py  test_templates.py  test_visible_tiles.py  test_waiting_state_presentation.py
